--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,12 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+  <!--MailSlurp script-->
+  <script src="https://smtpjs.com/v3/smtp.js">
+  </script>
+  <script src="correo.js">
+  </script>
+
 </head>
 
 <body>
