--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
               <label for="message">Start Writing From Here</label>
               <textarea name="message" id="message" class="form-control" placeholder="Your Text here ..."></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn btn-primary" onclick="enviarCorreo()">Send</button>
           </form>
         </div>
       </div>
