--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,6 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-  <!--MailSlurp script-->
-  <script src="https://smtpjs.com/v3/smtp.js">
-  </script>
-  <script src="correo.js">
-  </script>
-
 </head>
 
 <body>
@@ -69,7 +63,8 @@
       <div class="col-lg-8">
         <div class="p-5 shadow rounded content">
           <h2 class="section-title">Got Any Questions</h2>
-          <form method="POST" action="#">
+          <form action="https://formspree.io/f/mzbnyjye"
+          method="POST">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="fname">First Name</label>
